2001-07-09  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: make it work without ssl.

2001-07-09  Glenn F. Maynard <glenn@zewt.org>

	* FileSet.cc, FileSet.h: speed-optimization using binary search.

2001-07-06  Alexander V. Lukyanov  <lav@yars.free.net>

	* misc.cc: little speed-optimization in squeeze_file_name.

2001-07-03  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, ftpclass.cc, ftpclass.h:
	  get rid of group/gpass.
	* Resolver.cc, netrc.cc, Fish.cc, Http.cc: use case-insensitive
	  hostname comparision.
	* Http.cc, Http.h: support CONNECT method for https over http proxy.

2001-07-02  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolve.cc: update SRV support for RFC2782.
	* HttpDir.cc: add roxen listing support; reorganize.

2001-06-30  Alexander V. Lukyanov  <lav@yars.free.net>

	* url.cc: use host=localhost for urls like file:///path.

2001-06-26  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: fix closure generation for user==0.
	* CmdExec.cc: fix for cwd==0.
	* Http.cc: get rid of data_buf; handle identity encoding.
	* Fish.cc, Fish.h: more work.

2001-06-19  Alexander V. Lukyanov  <lav@yars.free.net>

	* resource.cc: new settings ftp:port-ipv4, ftp:acct, ftp:site-group.
	* ftpclass.cc, ftpclass.h: support for ACCT, SITE GROUP,
	  and for ftp:port-ipv4.
	* ResMgr.cc, ResMgr.h: IPv4AddrValidate new validator.

2001-06-18  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: handle 416 reply code.
	* ProcWait.cc, ProcWait.h, lftp.cc: (ProcWait::DeleteAll) new method;
	  use it.
	* FileAccess.cc, modconfig.h, Makefile.am: include Fish.

2001-06-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopyFtp.cc: fix restart in fxp mode.
	* HttpDir.cc, HttpDir.h, NetAccess.cc, NetAccess.h: (GenericParseGlob)
	  new class; use it.
	* Fish.cc, Fish.h: implement Glob, ListInfo.
	* ftpclass.cc: better status for fxp.

2001-06-07  Alexander V. Lukyanov  <lav@yars.free.net>
